# Enterprise-Knowledge-Copilot-Hybrid-RAG-and-Validation

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  mypy.ini
.github/workflows/: ci.yml  release.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  db.py  domain.py  evaluation_adapter.py  logging_config.py  main.py  schemas.py
backend/app/services/: bm25.py  citations.py  container.py  embeddings.py  evaluation.py  generation.py  indexing.py  ingestion.py  metrics.py  rag.py  reranker.py  retrieval.py  validator.py  vector_store.py
backend/data/: copilot.db-shm  copilot.db-wal
backend/tests/: conftest.py  test_api.py  test_database_and_indexing.py  test_evaluation.py  test_ingestion.py  test_retrieval.py  test_sample_corpus_integration.py  test_validator.py
data/: README.md
data/benchmark/: DATASHEET.md  enterprise_qa_v1.csv  enterprise_qa_v1.jsonl
data/ground_truth/: canonical_passages.jsonl  corpus_manifest.json
docs/: api.md  architecture.md  evaluation.md  operations.md
evaluation/: .gitignore  README.md  __init__.py  adapters.py  io_utils.py  judges.py  metrics.py  mlflow_tracking.py  reporting.py  run_experiments.py  runner.py  schemas.py
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
scripts/: generate_enterprise_assets.py  run_evaluation.py  validate_benchmark.py  validate_evaluation_assets.py
(+75 files in other folders)
