[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-knowledge-copilot-backend"
version = "0.1.0"
description = "Production-style hybrid RAG backend with citation verification"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic>=2.7,<3",
  "python-multipart>=0.0.9,<1",
  "pypdf>=5,<7",
  "python-docx>=1.1,<2",
  "rank-bm25>=0.2.2,<1",
  "langchain-core>=0.3,<2",
  "langgraph>=0.2,<2",
]

[project.optional-dependencies]
vector = ["chromadb>=0.5,<2", "sentence-transformers>=3,<6"]
providers = [
  "langchain-openai>=0.2,<2",
  "langchain-anthropic>=0.2,<2",
  "langchain-google-genai>=2,<5",
  "langchain-ollama>=0.2,<2",
]
mlops = ["mlflow-skinny>=2.16,<4"]
test = ["httpx>=0.27,<1", "pytest>=8,<9", "pytest-cov>=5,<8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
  "integration: tests that exercise optional document libraries or HTTP boundaries",
]

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
omit = ["app/evaluation_adapter.py"]

